--- a/LC207.Course Schedule.md
+++ b/LC207.Course Schedule.md
@@ -25,3 +25,37 @@ class Solution:
 
         return completed == numCourses
 ```
+
+DFS + Three-Color Marking 
+```
+from collections import defaultdict
+from typing import List
+
+class Solution:
+    def canFinish(self, numCourses: int, prerequisites: List[List[int]]) -> bool:
+        graph = defaultdict(list)
+        for cur, pre in prerequisites:
+            graph[pre].append(cur)
+
+        visited = [0] * numCourses  # 0=unvisited, 1=visiting, 2=visited
+
+        def dfs(node):
+            if visited[node] == 1:
+                return False  # 环检测到，无法完成课程
+            if visited[node] == 2:
+                return True   # 已检查，无环
+
+            visited[node] = 1
+            for nei in graph[node]:
+                if not dfs(nei):
+                    return False
+            visited[node] = 2
+            return True
+
+        for course in range(numCourses):
+            if not dfs(course):
+                return False
+        return True
+```
+
+
