Update LC300.Longest Increasing Subsequence.md

--- a/LC300.Longest Increasing Subsequence.md
+++ b/LC300.Longest Increasing Subsequence.md
@@ -1,7 +1,45 @@
+递归+记忆化
+```
+class Solution:
+    def lengthOfLIS(self, nums: List[int]) -> int: 
+        n = len(nums)
+        memo = {}
+        def helper(i):
+            if i in memo:
+                return memo[i]
+            max_len = 1
+            for j in range(i):
+                if nums[j] < nums[i]:
+                    max_len = max(max_len, helper(j) + 1)
+            memo[i] = max_len
+            return max_len
+
+        return max(helper(i) for i in range(n))
+```
+
+常规二分法解法
+```
+class Solution:
+    def lengthOfLIS(self, nums: List[int]) -> int: 
+        sublist=[]     
+        for num in nums:
+            left,right=0,len(sublist)-1
+            while left<=right:
+                mid=left+(right-left)//2
+                if sublist[mid]<num:
+                    left=mid+1
+                else:
+                    right=mid-1
+            if left==len(sublist):
+               sublist.append(num)
+            else:
+                sublist[left]=num
+        return len(sublist)
+```
+
+二分法模块快捷操作
 ```
 from bisect import bisect_left
-from typing import List
-
 class Solution:
     def lengthOfLIS(self, nums: List[int]) -> int:
         d = []  # 用来维护一个递增序列
