--- a/LC300.Longest Increasing Subsequence.md
+++ b/LC300.Longest Increasing Subsequence.md
@@ -1,3 +1,23 @@
+DP
+```
+from typing import List
+
+class Solution:
+    def lengthOfLIS(self, nums: List[int]) -> int:
+        n = len(nums)
+        if n <= 1:
+            return n
+
+        dp = [1] * n  # dp[i]：以 nums[i] 结尾的最长递增子序列长度
+
+        for i in range(n):
+            for j in range(i):
+                if nums[i] > nums[j]:
+                    dp[i] = max(dp[i], dp[j] + 1)
+
+        return max(dp)
+```
+
 递归+记忆化
 ```
 class Solution:
